--- a/chatbot.html
+++ b/chatbot.html
@@ -498,7 +498,7 @@
   <div class="chatbot-container">
     <header class="chatbot-header">
       <div class="header-left">
-        <a href="index.html" class="back-btn" title="Back to Home">
+        <a href="/" class="back-btn" title="Back to Home">
           <i class="fas fa-arrow-left"></i>
         </a>
         <div class="chatbot-avatar">
@@ -514,7 +514,7 @@
         <a href="#" class="nav-btn" id="openSettings">
           <i class="fas fa-cog"></i> Settings
         </a>
-        <a href="index.html" class="nav-btn">
+        <a href="/" class="nav-btn">
           <i class="fas fa-home"></i> Home
         </a>
       </div>
@@ -1040,6 +1040,7 @@ function loadConfiguration() {
     window.quickAction = quickAction;
     window.copyToClipboard = copyToClipboard;
     window.removeAttachment = removeAttachment;
+  
   </script>
 </body>
 </html>
