--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
     <div class="hero-content">
      <h1 id="hero-title">Smart Student Helpdesk Chatbot</h1>
      <p class="subtitle" id="hero-subtitle">Powered by IBM Watson Assistant - Your 24/7 AI companion for academic excellence. Instant access to notes, schedules, and campus information.</p>
-     <div class="hero-buttons"><a href="chatbot.html" target="_blank" class="btn-primary" id="hero-button">Launch Chatbot</a> <a href="#features" class="btn-secondary">Explore Features</a>
+     <div class="hero-buttons"><a href="/chatbot"  class="btn-primary" id="hero-button">Launch Chatbot</a> <a href="#features" class="btn-secondary">Explore Features</a>
      </div>
     </div>
     <div class="hero-visual">
@@ -1310,7 +1310,7 @@
       </div>
      </div>
     </div>
-    <div class="demo-cta"><a href="chatbot.html" target="_blank" class="btn-primary">Start Chatting Now</a>
+    <div class="demo-cta"><a href="/chatbot"  class="btn-primary">Start Chatting Now</a>
     </div>
    </div>
   </section><!-- Team Section -->
@@ -1374,7 +1374,7 @@
     </div>
    </div>
   </footer><!-- Floating Chatbot Button -->
-  <div class="chatbot-float-btn"><a href="chatbot.html" target="_blank">🤖</a>
+  <div class="chatbot-float-btn"><a href="/chatbot" target="_blank">🤖</a>
   </div>
   <script>
     const defaultConfig = {
